--- a/speaker-registration/index.html
+++ b/speaker-registration/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1dphSqoJqf_HX9eTp3QBeS4LRiW2prxnCuWAjbUzvJD0/viewform" />
+		<meta http-equiv="refresh" content="0; url=https://eventyay.com/e/5642d9a1/cfs/" />
 		<title>FOSSASIA Speaker Registration</title>
 
 		<meta name="description" content="FOSSASIA Speaker Registration" />
