--- a/index.html
+++ b/index.html
@@ -943,6 +943,222 @@
 				</div>
 			</section>
 
+            <a id="team" class="in-page-link"></a>
+
+            <section class="speakers duplicatable-content">
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h1>Team</h1>
+                        </div>
+                    </div>
+
+                    <div class="row">
+
+
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Mario Behling" src="img/mariobehling.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="http://twitter.com/mariobehling" target="default"><i class="icon social_twitter"></i></a>
+                                                <a href="https://www.linkedin.com/in/mariobehling" target="default"><i class="icon social_linkedin"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="speaker-description">
+                                    <h2>Mario Behling</h2>
+                                    <span class="sub">AI</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Nicco Kunzmann" src="img/NiccoKunzmann.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://twitter.com/DojoPotsdam" target="default"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="speaker-description">
+                                    <h2>Nicco Kunzmann</h2>
+                                    <span class="sub">CoderDojo</span>
+                                </div>
+                            </div>
+                        </div>
+
+						<div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Mario Parade" src="img/MarioParade.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="http://www.wissenschaftsladen-potsdam.de" target="_self"><i class="icon fa fa-external-link"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Mario Parade</h2>
+                                    <span class="sub">Fablab Potsdam</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Roland Turner" src="img/ReneBohne.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="#"><i class="icon social_twitter"></i></a>
+                                                <a href="#"><i class="icon social_linkedin"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Rene Bohne</h2>
+                                    <span class="sub">Fablabber</span>
+                                </div>
+                            </div>
+                        </div>
+
+							<div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Martin Koll" src="img/anonymous.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://www.freiland-potsdam.de/" target="default"><i class="icon fa fa-external-link"></i></i></a>
+                                                <a href="https://twitter.com/freilandpotsdam" target="default"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Martin Koll</h2>
+                                    <span class="sub">freiLand e.V.</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Kirstin Heidler" src="img/KirstinHeidler.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://twitter.com/tinir_ks" target="default"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Kirstin Heidler</h2>
+                                    <span class="sub">Developer</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Hong Phuc Dang" src="img/hongphucdang.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+												<a href="http://fossasia.org"><i class="icon fa fa-external-link"></i></a>
+                                                <a href="http://twitter.com/hpdang" target="default"><i class="icon social_twitter"></i></a>
+                                                <a href="https://www.linkedin.com/in/hongphucdang" target="default"><i class="icon social_linkedin"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Hong Phuc Dang</h2>
+                                    <span class="sub">FOSSASIA Founder</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Iris Wessolowski" src="img/IrisWessolowski.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://twitter.com/_iwess" target="default"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Iris Wessolowski</h2>
+                                    <span class="sub">Science Podcaster</span>
+                                </div>
+                            </div>
+                        </div>
+                                
+                        <div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Jan Christoph Borchardt" src="img/JanChristophBorchardt.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+												<a href="http://nextcloud.com"><i class="icon fa fa-external-link"></i></a>
+                                                <a href="https://twitter.com/jancborchardt" target="default"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Jan Christoph Borchardt</h2>
+                                    <span class="sub">Nextcloud/OpenSourceDesign</span>
+                                </div>
+                            </div>
+                        </div>
+
+						<div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Andre Rebentisch" src="img/AndreRebentisch.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://twitter.com/agonarch" target="_self"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Andre Rebentisch</h2>
+                                    <span class="sub">FFII.org</span>
+                                </div>
+                            </div>
+                        </div>
+
+
+            </section>
+
 			<a id="press" class="in-page-link"></a>
 			
 			<section class="color-blocks">
