--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,25 @@
                             </div>
                         </div>
 
+						<div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Taniya Offergeld" src="img/anonymous.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://twitter.com/ffii" target="_self"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Taniya Offergeld</h2>
+                                    <span class="sub">Linux Enthusiast</span>
+                                </div>
+                            </div>
+                        </div>
+
 
             </section>
 
