--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 							<div class="col-md-10 text-right">
 								<ul class="menu">
 									<li><a class="inner-link" href="#top" target="_self">Home</a></li>
-								<!---	<li><a href="./programm/" target="_self">Programm</a></li>
-									<li><a href="http://www.eventnook.com/event/ots16/register" target="_self">Ticket</a></li>
-									<li><a href="./speaker-registration" target="_self">Speaker</a></li>
+								<!---	<li><a href="./programm/" target="_self">Programm</a></li>-->
+									<li><a href="./tickets/" target="_self">Tickets</a></li>
+									<li><a href="./speaker-registration/" target="_self">Speaker</a></li>
 									<li><a class="inner-link" href="#ort" target="_self">Ort</a></li>
-									<li><a class="inner-link" href="#team" target="_self">Team&nbsp;</a></li> -->
+									<li><a class="inner-link" href="#team" target="_self">Team&nbsp;</a></li> 
 									<li><a class="inner-link" href="#press" target="_self">Presse</a></li>
 									<li><a href="http://speakers.opentechsummit.net/coc" target="default">CoC</a></li>
 									<li><a class="inner-link" href="#newsletter" target="default">Newsletter&nbsp;</a></li>
@@ -91,9 +91,9 @@
 									<li><a class="inner-link" href="#top">Home</a></li>
 									<li><a class="inner-link" href="#about-scroll">About</a></li>
 								<!---	<li><a class="inner-link" href="./programm/" target="_self">Programm</a></li>
-									<li><a class="inner-link" href="#home">Tickets</a></li>
-									<li><a href="http://www.eventnook.com/event/ots16/register" target="_self">Registrierung</a></li>
-									-->
+-->
+									<li><a href="./tickets/">Tickets</a></li>
+									<li><a href="./speaker-registration/" target="_self">Speaker-Registrierung</a></li>
 									<li><a class="inner-link" href="#newsletter" target="_self">Newsletter</a></li>
 								</ul>
 							</div>
@@ -269,8 +269,7 @@
 						<div class="col-md-5 col-sm-6">
 							<h1>Der OpenTechSummit findet am 25. Mai 2017 auf dem Gelände des freiLand e.V. in Potsdam statt</h1>
 							<a href="./tickets" class="btn" target="_self">Tickets Erwerben</a>
-
-			<!--		<a href="./programm/" class="btn" target="_self">Programm</a> -->
+							<a href="./speaker-registration/" class="btn" target="_self">Call for Speakers</a> -->
 							
 						</div>
 						
