--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 						<div class="col-md-5 col-sm-6">
 							<h1>Der OpenTechSummit findet am 25. Mai 2017 auf dem Gelände des freiLand e.V. in Potsdam statt</h1>
 							<a href="./tickets" class="btn" target="_self">Tickets Erwerben</a>
-							<a href="./speaker-registration/" class="btn" target="_self">Call for Speakers</a> -->
+							<a href="./speaker-registration/" class="btn" target="_self">Call for Speakers</a>
 							
 						</div>
 						
