--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,8 @@
                                         <img class="background-image" alt="Roland Turner" src="img/ReneBohne.jpg">
                                         <div class="hover-state text-center preserve3d">
                                             <div class="social-links vertical-align">
-                                                <a href="#"><i class="icon social_twitter"></i></a>
+                                                <a href="http://rene-bohne.de/" target="_self"><i class="icon fa fa-external-link"></i></a>
+                                                <a href="https://twitter.com/rene_bohne"><i class="icon social_twitter"></i></a>
                                                 <a href="#"><i class="icon social_linkedin"></i></a>
                                             </div>
                                         </div>
@@ -1060,7 +1061,7 @@
                                         <img class="background-image" alt="Martin Koll" src="img/anonymous.jpg">
                                         <div class="hover-state text-center preserve3d">
                                             <div class="social-links vertical-align">
-                                                <a href="https://www.freiland-potsdam.de/" target="default"><i class="icon fa fa-external-link"></i></i></a>
+                                                <a href="https://www.freiland-potsdam.de/" target="default"><i class="icon fa fa-external-link"></i></a>
                                                 <a href="https://twitter.com/freilandpotsdam" target="default"><i class="icon social_twitter"></i></a>
                                             </div>
                                         </div>
