--- a/index.html
+++ b/index.html
@@ -1347,8 +1347,8 @@
 					<div class="row ui-sortable">
 						<div class="col-sm-2">
 							<ul class="menu">
-								<li><a href="https://github.com/opntec" target="_self">GitHub</a>e</li>
-								<li><a href="#press" class="inner-link" target="default">Press</a>e</li>
+								<li><a href="https://github.com/opntec" target="_self">GitHub</a></li>
+								<li><a href="#press" class="inner-link" target="default">Presse</a></li>
 								<li><a href="./programm/" class="inner-link" target="_self">Programm</a></li>								
 								<li><a href="impressum.html" target="_blank">Impressum</a></li>
 								<li><a href="./tickets/" target="_self">Tickets</a></li>
