--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             </div>
 
                             <div class="col-md-4 col-sm-8">
-                                <h1>Jetzt "Call for Speakers" lesen und einen Vortrag, Workshop oder Stand einreichen.</h1>
+                                <h1>Hier "Call for Speakers" lesen und einen Vortrag, Workshop oder Stand einreichen.</h1>
 
                             </div>
                         </a>
