add StuPa as Partner

--- a/index.html
+++ b/index.html
@@ -1303,6 +1303,14 @@
 									</a>
 								</div>
 							</div>
+							
+							<div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://www.stupa.uni-potsdam.de/doku.php" target="default">
+										<img alt="AtuPa UP" src="img/StuPa.png">
+									</a>
+								</div>
+							</div>
 	
 						</div>
 					</div>
