--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,7 @@
 							<div class="col-md-4 col-sm-6 sponsor-column">
 								<div class="sponsor text-center">
 									<a href="http://www.stupa.uni-potsdam.de/doku.php" target="default">
-										<img alt="StuPa UP" src="img/StuPaIntransparent.png">
+										<img alt="StuPa UP" src="img/StuPaIntransparent.PNG">
 									</a>
 								</div>
 							</div>
