--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>OpenTechSummit Potsdam 25. Mai 2017, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
+        <title>OpenTechSummit Potsdam/Berlin 25. Mai 2017, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="OpenTechSummit 2017 - Europe's Premier Open Technology Event">
         <meta name="keywords" content="OpenTechSummit, Open Technology, Open Source, Open Hardware, Open Data, Open Knowledge, Open Education, Open Educational Resources, Berlin, Potsdam, Germany, Europe">
@@ -14,7 +14,7 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@opntec">
         <meta name="twitter:title" content="OpenTechSummit">
-        <meta name="twitter:description" content="OpenTechSummit Potsdam 25. Mai 2017, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data">
+        <meta name="twitter:description" content="OpenTechSummit Potsdam/Berlin 25. Mai 2017, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data">
         <meta name="twitter:creator" content="@opntec">
         <meta name="twitter:image" content="">
         <link rel="shortcut icon" href="OpenTechSummit.ico" type="image/x-icon" />
@@ -1088,7 +1088,7 @@
                                 </div>
                                 <div class="speaker-description">
                                     <h2>Kirstin Heidler</h2>
-                                    <span class="sub">Developer, Funding</span>
+                                    <span class="sub">Developer, Controlling</span>
                                 </div>
                             </div>
                         </div>
