--- a/index.html
+++ b/index.html
@@ -1311,6 +1311,14 @@
 									</a>
 								</div>
 							</div>
+							
+							<div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://stud.astaup.de/~vefa/" target="default">
+										<img alt="VeFa UP" src="img/vefa-logo-sw.png">
+									</a>
+								</div>
+							</div>
 	
 						</div>
 					</div>
