add fritz-kola as sponsor

--- a/index.html
+++ b/index.html
@@ -1319,6 +1319,14 @@
 									</a>
 								</div>
 							</div>
+							
+							<div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://www.fritz-kola.de/" target="default">
+										<img alt="fritz-kola" src="img/fritz-kola_logo_br2.jpg">
+									</a>
+								</div>
+							</div>
 	
 						</div>
 					</div>
