add TSB as Sponsor

--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,14 @@
 									</a>
 								</div>
 							</div>
-	
+							
+							<div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://www.technologiestiftung-berlin.de" target="default">
+										<img alt="Technologie Stiftung Berlin" src="img/TSB_Logo_hor.png">
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				
