--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
 				</div>
 			
 				<div class="map-holder col-md-6 col-sm-4">
-					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=13.070275783538818%2C52.38479409203026%2C13.086712360382082%2C52.392441964365915&amp;layer=mapnik&amp;marker=52.38861819382883%2C13.07849407196045" style="border: 1px solid black"></iframe>
+					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=13.070275783538818%2C52.38479409203026%2C13.086712360382082%2C52.392441964365915&layer=mapnik&marker=52.38917819382883%2C13.07714957196045" style="border: 1px solid black"></iframe>
 
 				</div>
 			</section>
