--- a/index.html
+++ b/index.html
@@ -1295,10 +1295,18 @@
 									</a>
 								</div>
 							</div>
+							
+							<div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="https://www.amtangee.com/" target="default">
+										<img alt="AMTANGEE" src="img/AMTANGEE_Logo_2016_Color_RGB.png">
+									</a>
+								</div>
+							</div>
 
 							<div class="col-md-4 col-sm-6 sponsor-column">
 								<div class="sponsor text-center">
-									<a href="http://http://freiland-potsdam.de/" target="default">
+									<a href="http://www.freiland-potsdam.de/" target="default">
 										<img alt="LPI" src="img/freiland.svg">
 									</a>
 								</div>
