add feinstaubsensor Workshop

--- a/index.html
+++ b/index.html
@@ -544,13 +544,13 @@
 								</div>
 							</div>
 					
-<!--							<div class="col-md-4 col-sm-6">
+							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
-									<img alt="Hardware bauen mit Mitch" src="img/hardware-with-mitch.jpg">
-									<h3>Fantastische Hardware Bauen &amp; Löten Lernen mit Mitch (TV-B-Gone)</h3>
-									<p>Wir bauen mit Hardware-Maker und Lötlegende Mitch Altman interessante, faszinierende, nützliche und verrückte Dinge wie: den TV-B-Gone (Fernsehausschalter für alle TVs!), das "Brain Machine-Gerät" um Glücksgefühle zu erzeugen, einen LEDcube mit blinkenden Lichtern, spaßige Spielgeräte, interaktive farbige Blinkenlichter, ein MintyBoost-Gadget um USB-Geräte zu laden und vieles mehr.</p><div><br></div><div><br></div>
+									<img alt="Feinstaub messen" src="img/33c3_FeinstaubsensorenWorkshop_OTS17_WissLap.jpg">
+									<h3>wir machen aus einem schmutziges Thema ein cooles Projekt mit #opendata</h3>
+									<p>Als Ergänzung zu den offiziellen Messwerte oder Städte und Kommunen wollen wir alle Bürger und Menschen sensibilisieren, den gefährlichen Feinstaub zu erkennen und selber zu messen. Ihr könnt vor Ort einen Sensor, das AirRohr bauen und mit nach Hause nehmen. Meldet euch <a href="https://machbar-potsdam.de/?p=1147" target="default">hier</a> an!</p><div><br></div><div><br></div>
 												
-								</div> -->  
+								</div> 
 							</div><div class="col-sm-6 col-md-4">
 								<div class="info-box">
 									<img alt="Jugend Hackt" src="img/jugend_hackt-01.jpg">
