--- a/index.html
+++ b/index.html
@@ -555,9 +555,9 @@
 							
 							<div class="col-sm-6 col-md-4">
 								<div class="info-box">
-									<img alt="Jugend Hackt" src="img/jugend_hackt-01.jpg">
-									<h3>Mitmachen bei Jugend Hackt und mit Code die Welt verbessern</h3>
-									<p>Jugend Hackt ist ein Hackathon für Jugendliche zwischen 12 und 18 Jahren, die ihre Fähigkeiten für eine positive Gesellschaft einsetzen. Alle die Lust haben mitzumachen und eigene Tech-Ideen umzusetzen sind herzlich eingeladen, um mehr über das Programm zu erfahren. Teilnehmer und Mentoren von "Jugend Hackt" zeigen entstandene Projekte, Handy-Apps und Websites mit spannenden, lustigen und wegweisenden Ideen und Prototypen.</p><div><br></div><div><br></div>
+									<img alt="GitHub for Designers" src="img/GithubDesigners.jpg">
+									<h3>Take part and improve the design of Open Source projects</h3>
+									<p>GitHub can be also greatly useful for visual design. We will have a look on how Mozilla Open Design and Open Source Design get coordinated on GitHub and how you can contribute. Design ca be open source as well.</p><div><br></div><div><br></div>
 												
 								</div>
 							</div> 
