--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,27 @@
                             </div>
                         </div>
 
+
+			<div class="col-md-6 col-sm-12">
+                            <div class="speaker-with-bio">
+                                <div class="speaker">
+                                    <div class="image-holder">
+                                        <img class="background-image" alt="Björn Huwe" src="img/BjörnHuwe.jpg">
+                                        <div class="hover-state text-center preserve3d">
+                                            <div class="social-links vertical-align">
+                                                <a href="https://www.wissenschaftsladen-potsdam.de" target="default"><i class="icon fa fa-external-link"></i></a>
+                                                <a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="speaker-description">
+                                    <h2>Björn Huwe</h2>
+                                    <span class="sub">Wissenschaftsladen Potsdam</span>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-md-6 col-sm-12">
                             <div class="speaker-with-bio">
                                 <div class="speaker">
