--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin-Potsdam 2017 <div><br></div></h1><h1 class="text-white">Hier als &nbsp;<a href="./speaker-registration" target="default">Speaker für einen Vortrag oder Workshop&nbsp;registrieren</a>.</h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin-Potsdam 2017 <div><br></div></h1><h1 class="text-white"><a href="./tickets" target="default">Hier Tickets</a> holen und am 25.Mai dabei sein.</h1>
 							</div>
 						</div>
 					</div>
