--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin-Potsdam 2017 <div><br></div></h1><h1 class="text-white"><a href="./tickets" target="default">Hier Tickets</a> holen und am 25.Mai dabei sein.</h1>
+								<h1 class="text-white">OpenTechSummit 2017<br> Freiland Potsdam, Friedrich-Engels-Str. 22.<div><br></div></h1><h1 class="text-white"><a href="./tickets" target="default">Hier Tickets</a> holen und am 25.Mai dabei sein.</h1>
 							</div>
 						</div>
 					</div>
@@ -1396,12 +1396,7 @@
 						<div class="col-sm-6">
 							<span class="lead color-heading">OpenTechSummit</span>
 							<p>
-								Der OpenTechSummit bringt die spannendsten Ideen und Macher der 
-		Open-Technology-Community in Postdam zusammen. Themen reichen von Open Hardware, 
-		über Enzyklopädien des freien Wissens, Software-Entwicklung und freie 
-		Netze bis hin zu Fragen&nbsp;<span>ü</span>ber Copyright&nbsp;und Patente für Firmengründer. 
-		Für Kinder und Technik-Begeisterte gibt es Workshops zum Selberbauen. 
-		Der erste OpenTechSummit fand 2009 in Taiwan statt.
+								Der OpenTechSummit bringt die spannendsten Ideen und Macher der Open-Technology-Community in Postdam zusammen. Themen reichen von Open Hardware, über Enzyklopädien des freien Wissens, Software-Entwicklung und freie Netze bis hin zu Fragen&nbsp;<span>ü</span>ber Copyright&nbsp;und Patente für Firmengründer. Für Kinder und Technik-Begeisterte gibt es Workshops zum Selberbauen. Der erste OpenTechSummit fand bereits 2009 in Taiwan statt und ist das 3.Mal in Deutschland zu Gast.
 							</p>
 						</div>
 					
