--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
 
                 <div class="container">
                     <div class="row">
-                        <a href="./speaker-registration" class="block-content" target="default">
+                        <a href="https://eventyay.com/e/5642d9a1/schedule/" class="block-content" target="default">
                             <div class="col-md-2 col-sm-4 text-center">
                                 <i class="icon pe-7s-like2 icon-large"></i>
                             </div>
 
                             <div class="col-md-4 col-sm-8">
-                                <h1>Hier "Call for Speakers" lesen und einen Vortrag, Workshop oder Stand einreichen.</h1>
+                                <h1>Hier Programm im Detail kennen lernen.</h1>
 
                             </div>
                         </a>
