--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<li><a class="inner-link" href="#top" target="_self">Home</a></li>
 									<li><a class="inner-link" href="./programm/schedule.html" target="_self">Programm</a></li>
 									<li><a href="./tickets/" target="_self">Tickets</a></li>
-									<li><a href="./speaker-registration/" target="_self">Speaker</a></li>
+									<li><a href="./programm/speaker.html" target="_self">Speaker</a></li>
 									<li><a class="inner-link" href="#ort" target="_self">Ort</a></li>
 									<li><a class="inner-link" href="#team" target="_self">Team&nbsp;</a></li> 
 									<li><a class="inner-link" href="#press" target="_self">Presse</a></li>
@@ -93,7 +93,7 @@
 								<!---	<li><a class="inner-link" href="./programm/schedule.html" target="_self">Programm</a></li>
 -->
 									<li><a href="./tickets/">Tickets</a></li>
-									<li><a href="./speaker-registration/" target="_self">Speaker-Registrierung</a></li>
+									<li><a href="./programm/speakers.html" target="_self">Speaker</a></li>
 									<li><a class="inner-link" href="#newsletter" target="_self">Newsletter</a></li>
 								</ul>
 							</div>
@@ -285,7 +285,7 @@
 						<div class="col-md-5 col-sm-6">
 							<h1>Der OpenTechSummit findet am 25. Mai 2017 auf dem Gelände des freiLand in Potsdam statt</h1>
 							<a href="./tickets" class="btn" target="_self">Tickets Erwerben</a>
-							<a href="./speaker-registration/" class="btn" target="_self">Call for Speakers</a>
+							<a href="./programm/speakers.html/" class="btn" target="_self">Call for Speakers</a>
 							
 						</div>
 						
