--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<li><a class="inner-link" href="#top" target="_self">Home</a></li>
 									<li><a class="inner-link" href="./programm/schedule.html" target="_self">Programm</a></li>
 									<li><a href="./tickets/" target="_self">Tickets</a></li>
-									<li><a href="./programm/speaker.html" target="_self">Speaker</a></li>
+									<li><a href="./programm/speakers.html" target="_self">Speaker</a></li>
 									<li><a class="inner-link" href="#ort" target="_self">Ort</a></li>
 									<li><a class="inner-link" href="#team" target="_self">Team&nbsp;</a></li> 
 									<li><a class="inner-link" href="#press" target="_self">Presse</a></li>
