--- a/index.html
+++ b/index.html
@@ -1324,6 +1324,14 @@
 									</a>
 								</div>
 							</div>
+
+							<div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://www.potsdam.de" target="default">
+										<img alt="StuPa UP" src="img/stadtpotsdam.jpg">
+									</a>
+								</div>
+							</div>
 							
 							<div class="col-md-4 col-sm-6 sponsor-column">
 								<div class="sponsor text-center">
