--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@
 							</div>
 						</a>
 						<a href="http://tinyurl.com/mcpress" class="block-content" target="default">
-	<!--					<a href="http://opentechsummit.net/OTS15PressPkg.zip" class="block-content" target="default"> --> &nbsp;
+						<a href="OTSPressPkg.zip" class="block-content" target="default"> &nbsp;
 							<div class="col-md-2 col-sm-4 text-center">
 								<i class="icon pe-7s-micro icon-large"></i>
 							</div>
