--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 									<li><a class="inner-link" href="#newsletter" target="_self">Newsletter&nbsp;</a></li>
 									<li class="has-dropdown"><a href="#">Summits</a>
 										<ul class="nav-dropdown">
+											<li><a href="http://2017.opentechsummit.net" target="_self">OpenTechSummit 2017</a></li>
 											<li><a href="http://2016.opentechsummit.net" target="_self">OpenTechSummit 2016</a></li>
 											<li><a href="http://2015.opentechsummit.net" target="_self">OpenTechSummit 2015</a></li>
 										</ul>
