--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 							<div class="col-md-10 text-right">
 								<ul class="menu">
 									<li><a class="inner-link" href="#top" target="_self">Home</a></li>
-									<li><a class="inner-link" href="./programm/schedule.html" target="_self">Programm</a></li>
 									<li><a href="./tickets/" target="_self">Tickets</a></li>
-									<li><a href="./programm/speakers.html" target="_self">Speaker</a></li>
-									<li><a class="inner-link" href="#ort" target="_self">Ort</a></li>
 									<li><a class="inner-link" href="#team" target="_self">Team&nbsp;</a></li> 
 									<li><a class="inner-link" href="#press" target="_self">Presse</a></li>
 									<li><a href="http://speakers.opentechsummit.net/coc" target="default">CoC</a></li>
@@ -94,7 +91,6 @@
 								<!---	<li><a class="inner-link" href="./programm/schedule.html" target="_self">Programm</a></li>
 -->
 									<li><a href="./tickets/">Tickets</a></li>
-									<li><a href="./programm/speakers.html" target="_self">Speaker</a></li>
 									<li><a class="inner-link" href="#newsletter" target="_self">Newsletter</a></li>
 								</ul>
 							</div>
@@ -216,13 +212,13 @@
 
                 <div class="container">
                     <div class="row">
-                        <a href="./programm/schedule.html" class="block-content" target="default">
+                        <a href="" class="block-content" target="default">
                             <div class="col-md-2 col-sm-4 text-center">
                                 <i class="icon pe-7s-like2 icon-large"></i>
                             </div>
 
                             <div class="col-md-4 col-sm-8">
-                                <h1>Hier Programm im Detail kennen lernen.</h1>
+                                <h1>Hier bald mehr zum Programm lesen.</h1>
 
                             </div>
                         </a>
@@ -287,7 +283,7 @@
 						<div class="col-md-5 col-sm-6">
 							<h1>Der OpenTechSummit findet am 10. Mai 2017 statt</h1>
 							<a href="./tickets" class="btn" target="_self">Tickets Erwerben</a>
-							<a href="./programm/speakers.html/" class="btn" target="_self">Call for Speakers</a>
+			<!--				<a href="./programm/speakers.html/" class="btn" target="_self">Call for Speakers</a> -->
 							
 						</div>
 						
