--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
 						<div class="col-sm-6">
 							<span class="lead color-heading">OpenTechSummit Festival</span>
 							<p>
-								Das OpenTechSummit Festival bringt die spannendsten Ideen und Macher der Open-Technology-Community in Postdam zusammen. Themen reichen von Open Hardware, über Enzyklopädien des freien Wissens, Software-Entwicklung und freie Netze bis hin zu Fragen&nbsp;<span>ü</span>ber Copyright&nbsp;und Patente für Firmengründer. Für Kinder und Technik-Begeisterte gibt es Workshops zum Selberbauen. Der erste OpenTechSummit fand bereits 2009 in Taiwan statt und ist das 3.Mal in Deutschland zu Gast.
+								Das OpenTechSummit Festival bringt die spannendsten Ideen und Macher der Open-Technology-Community in Postdam zusammen. Themen reichen von Open Hardware, über Enzyklopädien des freien Wissens, Software-Entwicklung und freie Netze bis hin zu Fragen&nbsp;<span>ü</span>ber Copyright&nbsp;und Patente für Firmengründer. Für Kinder und Technik-Begeisterte gibt es Workshops zum Selberbauen. Der erste OpenTechSummit fand bereits 2009 statt.
 							</p>
 						</div>
 					
