--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 				</div>
 			</section>
 
-			<section class="image-with-text background-dark preserve-3d">
+<!--			<section class="image-with-text background-dark preserve-3d">
 				
 				<div class="container vertical-align">
 					<div class="row">
@@ -558,7 +558,7 @@
 						</div>
 		
 					</div>
-			</section>
+			</section> -->
 
 			<section class="inline-video">
 				<div class="container">
