--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 			</section>
 
 
-			<a id="cpderdojo" class="in-page-link"></a>
+			<a id="coderdojo" class="in-page-link"></a>
 			
 			<section class="contained-gallery">
 				<div class="container">
