--- a/index.html
+++ b/index.html
@@ -1053,14 +1053,15 @@
 							</div>
 							<span class="text-white">Folge uns unter <a target="default" href="http://twitter.com/opntec">@opntec</a> für weitere Updates.</span>
 						<br/><br/>
-                          <p>
+                          <p><span class="text-white">Coworking space co.up, 8, Adalbertstraße, Kreuzberg, Friedrichshain-Kreuzberg, Berlin, 10999, Germany
+                        </span>
 							<b></b></p>
 						</div>
 					</div>
 				</div>
 			
 				<div class="map-holder col-md-6 col-sm-4">
-					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=13.070275783538818%2C52.38479409203026%2C13.086712360382082%2C52.392441964365915&amp;layer=mapnik&amp;marker=52.38917819382883%2C13.07714957196045" style="border: 1px solid black"></iframe>
+					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=13.417707681655886%2C52.49932410923991%2C13.421816825866701%2C52.50135206278226&amp;layer=mapnik&amp;marker=52.500339730516956%2C13.419762253761292" style="border: 1px solid black"></iframe>
 
 				</div>
 			</section>
@@ -1094,7 +1095,7 @@
 							<ul class="contact-methods">
 								<li><i class="icon pe-7s-mail"></i><span>contact@opentechsummit.net</span></li>
 								<li><i class="icon pe-7s-phone"></i><span>+49 30 41722597</span></li>
-								<li><i class="icon pe-7s-map-marker"></i><span>Malmöer Str. 6, 10439 Berlin</span></li>
+								<li><i class="icon pe-7s-map-marker"></i><span>Coworking space co.up, 8, Adalbertstraße, Kreuzberg, Friedrichshain-Kreuzberg, Berlin, 10999, Germany</span></li>
 							</ul>
 						</div>
 					</div>
