--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
 							<div class="col-sm-8 col-md-3">
 								<h1>Akkreditierung als Presse</h1>
 								<p>
-									Freier Eintritt für die Presse nach Akkreditierung.</p>
+									Zugang für die Presse nach Akkreditierung.</p>
 							</div>
 						</a>
 						<a href="http://tinyurl.com/mcpress" class="block-content" target="default">
@@ -1140,7 +1140,7 @@
 						<div class="col-sm-6">
 							<span class="lead color-heading">OpenTechSummit Festival</span>
 							<p>
-								Das OpenTechSummit Festival bringt die spannendsten Ideen und Macher der Open-Technology-Community in Postdam zusammen. Themen reichen von Open Hardware, über Enzyklopädien des freien Wissens, Software-Entwicklung und freie Netze bis hin zu Fragen&nbsp;<span>ü</span>ber Copyright&nbsp;und Patente für Firmengründer. Für Kinder und Technik-Begeisterte gibt es Workshops zum Selberbauen. Der erste OpenTechSummit fand bereits 2009 statt.
+								Das OpenTechSummit Festival bringt die spannendsten Ideen und Macher der Open-Technology-Community zusammen. Themen reichen von Open Hardware, über Enzyklopädien des freien Wissens, Software-Entwicklung und freie Netze bis hin zu Fragen&nbsp;<span>ü</span>ber Copyright&nbsp;und Patente für Firmengründer. Für Kinder und Technik-Begeisterte gibt es Workshops zum Selberbauen. Der erste OpenTechSummit fand bereits 2009 statt.
 							</p>
 						</div>
 					
