--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 					<div class="row">
 						<div class="col-md-5 col-sm-6">
 							<h1>Das OpenTechSummit-Festival findet vom 7.-13. Mai 2018 statt</h1>
-							<a href="./tickets" class="btn" target="_self">Tickets Erwerben</a>
+							<a href="./tickets" class="btn" target="_self">Tickets</a>
 			<!--				<a href="./programm/speakers.html/" class="btn" target="_self">Call for Speakers</a> -->
 							
 						</div>
@@ -1104,7 +1104,7 @@
               <!-- Parameters documentation at https://github.com/fossasia/fossasia-loklak-webtweets/blob/gh-pages/README.md -->
 							<div class="tweets-feed" data-count=3 data-from="opntec">
 							</div>
-							<span class="text-white">Folge uns unter <a target="default" href="http://twitter.com/opntec">@opntec</a> für weitere Updates.</span>
+							<span class="text-white">Folge uns unter <a target="default" href="https://twitter.com/opntec">@opntec</a> für weitere Updates.</span>
 						<br/><br/>
                           <p><span class="text-white">Coworking space co.up, 8, Adalbertstraße, Kreuzberg, Friedrichshain-Kreuzberg, Berlin, 10999, Germany
                         </span>
