--- a/index.html
+++ b/index.html
@@ -460,6 +460,24 @@
 
 								<li>
 									<div class="schedule-title">
+										<span class="time">12. Mai, Samstag</span>
+										<span class="title">14:00 - 17:00, Coderdojo</span>
+										<span class="title">Ort: Tanzsaal EPD Berlin</span>										
+									</div>
+									
+									<div class="schedule-text">
+										<p></p>
+									</div>
+									
+									<div class="marker-pin">
+										<div class="top"></div>
+										<div class="middle"></div>
+										<div class="bottom"></div>
+									</div>
+								</li>
+
+								<li>
+									<div class="schedule-title">
 										<span class="time">13. Mai, Sonntag</span>
 										<span class="title">10:00 - 15:00, Open Tech Brunch</span>
 										<span class="title">Ort: Berlin-Friedrichshain</span>										
